--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,6 +108,7 @@ slotmap = "1.0.7"
 toml = "0.9.5"
 smallvec = "1.15.1"
 ignore = "0.4.23"
+similar = { version = "2.7.0", features = ["inline"] }
 
 libc = "0.2.177"
 
