--- a/crates/moonbuild/Cargo.toml
+++ b/crates/moonbuild/Cargo.toml
@@ -40,7 +40,7 @@ petgraph.workspace = true
 walkdir.workspace = true
 tempfile.workspace = true
 ctrlc.workspace = true
-similar = { version = "2.7.0", features = ["inline"] }
+similar.workspace = true
 line-index.workspace = true
 which.workspace = true
 home.workspace = true
