fix: Simplify dry-run graph dumping and related code

--- a/crates/moonbuild-debug/Cargo.toml
+++ b/crates/moonbuild-debug/Cargo.toml
@@ -25,6 +25,7 @@ edition.workspace = true
 [dependencies]
 
 anyhow.workspace = true
+moonutil.workspace = true
 n2.workspace = true
 serde.workspace = true
 serde_json.workspace = true
