fix(rr): normalize source file path

--- a/crates/moonbuild-rupes-recta/Cargo.toml
+++ b/crates/moonbuild-rupes-recta/Cargo.toml
@@ -44,5 +44,6 @@ shlex.workspace = true
 derive_builder.workspace = true
 tracing.workspace = true
 regex.workspace = true
+dunce.workspace = true
 
 aho-corasick = "1.1.3"
