--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -410,8 +410,15 @@ jobs:
 
   # Rupes Recta parity test -- Remove once we switch to it fully
   rr-parity:
-    runs-on: ubuntu-latest
     needs: [typo-check, license-header-check]
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
       - name: Configure git
@@ -421,29 +428,50 @@ jobs:
           submodules: true
       - uses: dtolnay/rust-toolchain@nightly
       - uses: Swatinem/rust-cache@v2
+
       - name: install MoonBit(Unix)
+        if: ${{ matrix.os != 'windows-latest' }}
         run: |
           curl -fsSL https://cli.moonbitlang.com/install/unix.sh | bash -s nightly
           echo "$HOME/.moon/bin" >> $GITHUB_PATH
           echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
 
+      - name: install MoonBit(Windows)
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: |
+          $env:MOONBIT_INSTALL_VERSION="nightly"
+          Set-ExecutionPolicy RemoteSigned -Scope CurrentUser; irm https://cli.moonbitlang.com/install/powershell.ps1 | iex
+          "$env:USERPROFILE\.moon\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
+          "$env:GITHUB_WORKSPACE\target\debug" | Out-File -FilePath $env:GITHUB_PATH -Append
+
+      - name: Setup MSVC
+        if: ${{ matrix.os == 'windows-latest' }}
+        uses: ilammy/msvc-dev-cmd@v1
+
       - name: Build
         run: cargo build
 
       - name: Set built binary to PATH (Unix)
+        if: ${{ matrix.os != 'windows-latest' }}
         run: echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
+      - name: Set built binary to PATH (Windows)
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: Add-Content $env:GITHUB_PATH "$env:GITHUB_WORKSPACE\target\debug"
+
       - name: Versions
         run: cargo run --bin moon version --all
       - name: moon update
         run: |
           cargo run --bin moon update
+
       - name: RR parity check
         run: cargo xtask test-rr-parity --compare-baseline xtask/rr_expected_failures.txt
+
       - name: Upload RR parity logs
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: rr-parity-logs
+          name: rr-parity-logs-${{ matrix.os }}
           path: target/rr-parity-logs
           if-no-files-found: ignore
           retention-days: 7
