feat: Add windows shlex split/join

--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -55,6 +55,7 @@ pulldown-cmark.workspace = true
 serde_yaml.workspace = true
 slotmap.workspace = true
 tracing.workspace = true
+shlex.workspace = true
 
 [target."cfg(unix)".dependencies]
 libc.workspace = true
