--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -26,7 +26,7 @@ rust-version.workspace = true
 
 [dependencies]
 anyhow = "1.0.79"
-clap = { version = "4.4.12", features = ["derive"] }
+clap = { version = "4.4.12", features = ["derive", "env"] }
 dissimilar.workspace = true
 dunce.workspace = true
 serde = { version = "1.0", features = ["derive"] }
