--- a/crates/moonrun/Cargo.toml
+++ b/crates/moonrun/Cargo.toml
@@ -35,7 +35,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 v8 = "0.106.0"
 
 [build-dependencies]
-vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
+vergen-git2 = { version = "1.0.0", features = ["build"] }
 chrono.workspace = true
 
 [dev-dependencies]
