--- a/crates/moonrun/Cargo.toml
+++ b/crates/moonrun/Cargo.toml
@@ -39,7 +39,7 @@ vergen-git2 = { version = "1.0.0", features = ["build"] }
 chrono.workspace = true
 
 [dev-dependencies]
-snapbox = "0.4.15"
+snapbox.workspace = true
 tempfile = "3.6.0"
 walkdir = "2.5.0"
 expect-test.workspace = true
