feat: add proper signal propagation from moon to child processes
- Add signal_handler.rs module with child process registry
- Setup signal handlers for SIGINT, SIGTERM, SIGABRT, SIGHUP
- Register tokio child processes for automatic signal forwarding
- Add SignalAwareChild wrapper for process spawning
- Use signal-hook and libc for Unix signal handling
- Fix issue where moonrun processes would leak when moon receives signals

When Node.js or parent processes send abort/termination signals to moon,
both moon and all spawned moonrun processes now terminate cleanly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,8 @@ smallvec = "1.15.1"
 ignore = "0.4.23"
 similar = { version = "2.7.0", features = ["inline"] }
 
+signal-hook = "0.3.17"
+
 libc = "0.2.177"
 
 # Use tracing instead of log in the future
