--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -68,6 +68,8 @@ ignore.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-chrome.workspace = true
+signal-hook.workspace = true
+libc.workspace = true
 
 [target."cfg(windows)".dependencies.windows-sys]
 features = ["Win32_Foundation", "Win32_System_Console"]
