--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -63,6 +63,9 @@ signal-hook.workspace = true
 [target."cfg(unix)".dependencies]
 libc.workspace = true
 
+[target."cfg(windows)".dependencies]
+windows-sys.workspace = true
+
 [dev-dependencies]
 expect-test.workspace = true
 
