--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -57,14 +57,11 @@ slotmap.workspace = true
 tracing.workspace = true
 shlex.workspace = true
 logos = "0.15.1"
-tokio = { workspace = true, features = ["rt"] }
+tokio = { workspace = true, features = ["rt", "sync"] }
 signal-hook.workspace = true
 
 [target."cfg(unix)".dependencies]
 libc.workspace = true
-
-[target."cfg(windows)".dependencies]
-windows-sys.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
