--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -50,6 +50,7 @@ chrono.workspace = true
 log.workspace = true
 walkdir.workspace = true
 tokio = { workspace = true, features = ["rt"] }
+tokio-util.workspace = true
 futures.workspace = true
 clap_complete.workspace = true
 indexmap.workspace = true
@@ -68,6 +69,7 @@ ignore.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-chrome.workspace = true
+signal-hook.workspace = true
 
 [target."cfg(windows)".dependencies.windows-sys]
 features = ["Win32_Foundation", "Win32_System_Console"]
