--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -72,7 +72,11 @@ tracing-chrome.workspace = true
 signal-hook.workspace = true
 
 [target."cfg(windows)".dependencies.windows-sys]
-features = ["Win32_Foundation", "Win32_System_Console"]
+features = [
+    "Win32_Foundation",
+    "Win32_System_Console",
+    "Win32_System_JobObjects",
+]
 version = "0.59.0"
 
 [dev-dependencies]
