fix: use job object for windows child cleanup

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -76,6 +76,7 @@ features = [
     "Win32_Foundation",
     "Win32_System_Console",
     "Win32_System_JobObjects",
+    "Win32_System_Threading",
 ]
 version = "0.59.0"
 
