fix: wire job object for windows

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -74,6 +74,7 @@ signal-hook.workspace = true
 [target."cfg(windows)".dependencies.windows-sys]
 features = [
     "Win32_Foundation",
+    "Win32_Security",
     "Win32_System_Console",
     "Win32_System_JobObjects",
     "Win32_System_Threading",
