--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ reqwest = { version = "0.12.24", default-features = false, features = [
     "json",
     "stream",
     "rustls-tls",
+    "rustls-tls-native-roots",
     "charset",
     "http2",
     "system-proxy",
