--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -29,6 +29,7 @@ anyhow = "1.0.79"
 clap = { version = "4.4.12", features = ["derive", "env"] }
 dissimilar.workspace = true
 dunce.workspace = true
+ignore = "0.4.23"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snapbox = "0.4.15"
