--- a/crates/moonbuild/template/moon_new_template.toml
+++ b/crates/moonbuild/template/moon_new_template.toml
@@ -307,6 +307,7 @@ content = """
 .DS_Store
 _build/
 target/
+target
 .mooncakes/
 .moonagent/"""
 
@@ -365,7 +366,7 @@ content = """
 """
 
 [[files]]
-path = "Agents.md"
+path = "AGENTS.md"
 content = """
 # Project Agents.md Guide
 
@@ -415,7 +416,7 @@ You can browse and install extra skills here:
 
 - Prefer `assert_eq` or `assert_true(pattern is Pattern(...))` for results that
   are stable or very unlikely to change. Use snapshot tests to record current
-  behavior. For solid, well‑defined results (e.g. scientific computations),
+  behavior. For solid, well-defined results (e.g. scientific computations),
   prefer assertion tests. You can use `moon coverage analyze > uncovered.log` to
   see which parts of your code are not covered by tests.
 """
