--- a/crates/moonbuild/template/moon_new_template.toml
+++ b/crates/moonbuild/template/moon_new_template.toml
@@ -5,7 +5,9 @@ content = ""
 [[files]]
 path = "cmd/main/moon.pkg"
 content = """
-// import "{{username}}/{{module}}" as @lib
+// import {
+//   "{{username}}/{{module}}" as @lib,
+// }
 
 options(
   "is-main": true,
