--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -27,7 +27,7 @@ rust-version.workspace = true
 [dependencies]
 anyhow = "1.0.79"
 clap = { version = "4.4.12", features = ["derive", "env"] }
-dissimilar.workspace = true
+similar.workspace = true
 dunce.workspace = true
 ignore = "0.4.23"
 serde = { version = "1.0", features = ["derive"] }
