feat: enable `NEW_MOON_PKG` by default, update moon new template

--- a/crates/moonbuild/template/moon_new_template.toml
+++ b/crates/moonbuild/template/moon_new_template.toml
@@ -6,12 +6,13 @@ content = ""
 path = "cmd/main/moon.pkg"
 content = """
 // import {
-//   "{{username}}/{{module}}" as @lib,
+//   "{{username}}/{{module}}" @lib,
 // }
 
 options(
   "is-main": true,
-)"""
+)
+"""
 
 [[files]]
 path = "cmd/main/main.mbt"
@@ -379,13 +380,13 @@ You can browse and install extra skills here:
 
 ## Project Structure
 
-- MoonBit packages are organized per directory, for each directory, there is a
-  `moon.pkg.json` file listing its dependencies. Each package has its files and
-  blackbox test files (common, ending in `_test.mbt`) and whitebox test files
-  (ending in `_wbtest.mbt`).
+- MoonBit packages are organized per directory; each directory contains a
+  `moon.pkg` file listing its dependencies. Each package has its files and
+  blackbox test files (ending in `_test.mbt`) and whitebox test files (ending in
+  `_wbtest.mbt`).
 
-- In the toplevel directory, this is a `moon.mod.json` file listing about the
-  module and some meta information.
+- In the toplevel directory, there is a `moon.mod.json` file listing module
+  metadata.
 
 ## Coding convention
 
