refactor: replace xtask with dependency

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -90,6 +90,7 @@ clap-markdown = "0.1.4"
 similar.workspace = true
 colored.workspace = true
 libc.workspace = true
+moon-test-util = { path = "../moon-test-util" }
 
 
 [[bin]]
