--- a/crates/moon-test-util/Cargo.toml
+++ b/crates/moon-test-util/Cargo.toml
@@ -17,18 +17,16 @@
 # For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.
 
 [package]
-name = "xtask"
+name = "moon-test-util"
 version = "0.1.0"
 edition.workspace = true
 rust-version.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-anyhow = "1.0.79"
-clap = { version = "4.4.12", features = ["derive", "env"] }
+anyhow.workspace = true
 dunce.workspace = true
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-toml.workspace = true
-walkdir.workspace = true
+ignore.workspace = true
+snapbox.workspace = true
+tempfile.workspace = true
+which.workspace = true
+home.workspace = true
