--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,19 +192,12 @@ jobs:
       - name: Build xtask
         run: cargo build -p xtask
 
-      - name: Check Moon test driver template format
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo run --bin moon -- fmt --check --manifest-path crates/moonbuild/template/test_driver_project/moon.mod.json
-
       - name: Run tests
         run: cargo test
 
-      - name: Check format
+      - name: Auxiliary checks
         if: matrix.os == 'ubuntu-latest'
-        run: cargo fmt -- --check
-      - name: Clippy
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo xtask ci
 
       - name: Test core (Unix)
         if: ${{ matrix.os != 'windows-latest' }}
@@ -315,12 +308,9 @@ jobs:
       - name: Run tests
         run: cargo test
 
-      - name: Check format
+      - name: Auxiliary checks
         if: matrix.os == 'ubuntu-latest'
-        run: cargo fmt -- --check
-      - name: Clippy
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo xtask ci
 
       - name: Test core (Unix)
         if: ${{ matrix.os != 'windows-latest' }}
