--- a/crates/moon-test-util/Cargo.toml
+++ b/crates/moon-test-util/Cargo.toml
@@ -26,7 +26,8 @@ rust-version.workspace = true
 anyhow.workspace = true
 dunce.workspace = true
 ignore.workspace = true
-snapbox.workspace = true
+snapbox = { workspace = true, features = ["regex"] }
 tempfile.workspace = true
 which.workspace = true
 home.workspace = true
+regex.workspace = true
